--- a/_layouts/keynote.html
+++ b/_layouts/keynote.html
@@ -61,7 +61,7 @@ layout: default
 
                 {% if site.duoshuo_share && site.duoshuo_username %}
                 <!-- 多说 Share start -->
-                </style>
+                <!-- </style>
                 <div class="ds-share"
                     style="text-align: right"
                     data-thread-key="{{page.id}}" data-title="{{page.title}}"
@@ -79,7 +79,7 @@ layout: default
                       </div>
                     </div>
                 <hr>
-                </div>
+                </div> -->
                 <!-- 多少 Share end-->
                 {% endif %}
 
